--- a/assessment-mitsogo/src/components/Navbar/Navbar.css
+++ b/assessment-mitsogo/src/components/Navbar/Navbar.css
@@ -71,6 +71,10 @@ header{
   header .responsive_nav {
   width: 100%;
   }
+  nav a {
+    font-size: 15px !important;
+    color: black; 
+  }
  
 }
 
