--- a/assessment-mitsogo/src/components/Whyhexon/WhyHexnode.css
+++ b/assessment-mitsogo/src/components/Whyhexon/WhyHexnode.css
@@ -50,6 +50,17 @@
     font-weight: 400;
 
   }
+  .hover-content1 {
+    visibility: hidden;
+
+    /* display: none; */
+    border-radius: 4px;
+    text-align: start;
+    font-size: 18px;
+    color: #DD0735;
+    font-weight: 400;
+
+  }
   
   .card:hover .hover-content {
     display: block; 
@@ -68,8 +79,23 @@
 }
 
 @media screen and (max-width:450px){
+  .hover-content{
+    display: none !important;
+  }
   .col-lg-5{
     height: 250px !important;
+  }
+  .hover-content1 {
+    visibility: visible;
+
+    /* display: none; */
+    border-radius: 4px;
+    text-align: start;
+    font-size: 18px;
+    color: #DD0735;
+    font-weight: 400;
+    text-align: center;
+
   }
   
 }
@@ -82,5 +108,8 @@
   }
   .cardContainer{
     justify-content: center !important;
+  }
+  .hover-content{
+    display: block;
   }
 }
