--- a/assessment-mitsogo/src/components/carousal/carousal.css
+++ b/assessment-mitsogo/src/components/carousal/carousal.css
@@ -101,21 +101,37 @@
   border: none !important;
   cursor: pointer;
 }
+.swiper-button-next:after,  .swiper-button-prev:after{
+  font-weight: 200 !important;
+  color: #8b8b8b;
+    }
 
-@media (max-width: 800px) {
+@media screen and (max-width:450px) {
+  .card-body1 {
+    flex-direction: column;
+    justify-content: center;
+    width: 80%;
+  }
+  .testimonial-card {
+    max-width: 100%;
+    padding: 15px 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+}
+@media (max-width: 1250px) {
   .swiper-container {
     flex-direction: column;
     align-items: center;
   }
 
   .testimonial-card {
-    max-width: 100%;
+    max-width: 80%;
     padding: 15px 10px;
   }
 
-  .card-body1 {
-    flex-direction: column;
-  }
+
 
   .testimonial-image {
     width: 200px;
@@ -142,8 +158,26 @@
 
   .swiper-button-prev,
   .swiper-button-next {
+    position: relative !important;
     width: 40px;
     height: 40px;
     font-size: 10px !important;
+  }
+  .swiper-buttons-container {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    gap: 10px;
+    margin-top: 20px;
+    border: none;
+  }
+  .swiper-button-next:after,  .swiper-button-prev:after{
+font-size: 16px ;
+  }
+  .testimonial-image{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
   }
 }
